--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,11 @@ body {
 a {
     color: black !important;
 }
+
+.text-underline {
+    border-bottom: 1px solid black;
+}
+
 .fw-100 {
     font-weight: 100;
 }
@@ -872,7 +877,7 @@ a {
 }
 
 .c-sec-2-color {
-    color: #5b5b5b;
+    color: #5b5b5b !important;
 }
 
 .intro-img {
@@ -1926,7 +1931,35 @@ a {
     background-color: #f5f5f5;
 }
 
+/* wishlist modal */
+.wishlist-modal-header {
+    background-color: #222222;
+}
 
+.add-tocard-modl {
+    background-color: black;
+    color: white;
+    font-size: 14px;
+    padding: 12px 26px;
+    border-radius: 34px;
+}
+
+.wishlist-modal-width {
+    max-width: 650px;
+    width: 90%;
+}
+
+.compare-bodal-width {
+    max-width: 98%;
+    width: 98%;
+}
+
+.compare-table td {
+     padding: 1.5rem !important; 
+}
+.compare-table th {
+    padding: 1rem !important; 
+}
 
 /* media */
 @media only screen and (min-width: 576px) {
